
2002-04-29  Andrew Csillag  <drew@localhost.localdomain>

	* SkunkWeb/sw.conf.in: removed part where you specified the
	password slot for the PlainSessionAuth authorizer since we don't
	do that anymore.

	* SkunkWeb/Services/auth/__init__.py: added more documentation in
	the comment describing authorizer objects as well as did a few
	grammar/spelling/capitalization fixes.

	The SessionAuthBase also no longer stores the password in the
	session.  That was pretty stupid.  If somebody actually wants
	that, they can do it themselves.

	* SkunkWeb/sw.conf.in: removed cookieauth stuff, added auth stuff

	* configure, configure.in: removed cookieauth stuff, added auth
	stuff
	
	* SkunkWeb/configure, SkunkWeb/configure.in: removed cookieauth 
	stuff, added auth stuff

	* SkunkWeb/Services/auth/{login.html,__init__.py,logout.html}:
	added new auth service

	* SkunkWeb/Services/cookieauth: whole directory removed.
	Superceded by new auth service which is now the swiss army knife
	of web authentication.

2002-04-27  Andrew Csillag  <drew@localhost.localdomain>

	* SkunkWeb/Services/cookieauth/__init__.py: cleaned up so that you
	can provide arbitrary authenticator info that only somewhat cookie
	related???

2002-04-27  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/ConfigLoader.py (loadConfig): fix so that multiple config
	files/Include directive will work as promised.

	* FAQ: updated.

	* SkunkWeb/Services/rewrite.py (__getcompiled): now compile
	regexes in Configuration.rewriteRules, if they aren't already
	compiled. (DynamicRewriter, Redirect): extended service so it can
	perform take functions as replacements, as in re.sub, and, with
	DynamicRewriter, have access to the connection and sessionDict.  A
	Redirect class added as example and trial run.

2002-04-26  Andrew Csillag  <drew@localhost.localdomain>

	* pylibs/AE/cacheKey/cachekey.c(encodeSingle): now will encode
	DateTime objects so they can be part of a cache key, and improved